src/fr/ubordeaux/arduinoCode/Parser.output
Terminals unused in grammar

    "double"
    "else"
    "foreach"
    "if"
    "in"
    "long"


Grammar

    0 $accept: program $end

    1 program: list_of_definitions "begin" list_of_stms "end"

    2 list_of_definitions: %empty
    3                    | list_of_definitions definition

    4 list_of_stms: stm
    5             | list_of_stms stm

    6 definition: var_definition
    7           | type_definition
    8           | function_decl
    9           | procedure_decl
   10           | function_definition
   11           | procedure_definition

   12 var_definition: list_of_identifiers ':' type ';'

   13 list_of_identifiers: IDENTIFIER
   14                    | list_of_identifiers ',' IDENTIFIER

   15 type_definition: IDENTIFIER '=' type ';'

   16 function_decl: "function" IDENTIFIER '(' list_of_parameters ')' ':' type ';'

   17 procedure_decl: "procedure" IDENTIFIER '(' list_of_parameters ')' ';'

   18 $@1: %empty

   19 function_definition: "function" IDENTIFIER '(' list_of_parameters ')' ':' type '{' $@1 block '}'

   20 $@2: %empty

   21 procedure_definition: "procedure" IDENTIFIER '(' list_of_parameters ')' '{' $@2 block '}'

   22 list_of_parameters: parameter
   23                   | list_of_parameters ',' parameter

   24 parameter: IDENTIFIER ':' type

   25 block: list_of_stms

   26 type: "boolean"
   27     | number
   28     | "string" '[' INTEGER ']'
   29     | "range" "of" type
   30     | "set" "of" type
   31     | "list" "of" type
   32     | "enum" '(' list_of_identifiers ')'
   33     | "struct" '{' list_of_fields '}'

   34 list_of_fields: field
   35               | list_of_fields field

   36 field: IDENTIFIER ':' type ';'

   37 number: "byte"
   38       | "pin"
   39       | "unsigned" "byte"
   40       | "short"
   41       | "unsigned" "short"
   42       | "integer"
   43       | "unsigned" "integer"
   44       | "float"

   45 stm: left_part "++" ';'
   46    | left_part "--" ';'
   47    | left_part '=' expression ';'
   48    | left_part "+=" expression ';'
   49    | left_part "-=" expression ';'
   50    | left_part "*=" expression ';'
   51    | left_part "/=" expression ';'
   52    | left_part "%=" expression ';'
   53    | left_part "&=" expression ';'
   54    | left_part "|=" expression ';'
   55    | left_part "&&=" expression ';'
   56    | left_part "||=" expression ';'
   57    | ATmega328p_procedure
   58    | "switch" '(' expression ')' '{' list_of_case_stms '}'
   59    | "do" stm "while" '(' expression ')' ';'
   60    | "loop" stm
   61    | "break" ';'
   62    | "continue" ';'
   63    | "return" expression ';'
   64    | '{' list_of_stms '}'

   65 list_of_case_stms: case_stm
   66                  | list_of_case_stms case_stm

   67 case_stm: "case" expression ':' stm

   68 left_part: IDENTIFIER
   69          | IDENTIFIER '[' expression ']'

   70 expression: constant_expression
   71           | left_part
   72           | IDENTIFIER '(' list_of_expressions ')'
   73           | '[' list_of_expressions ']'
   74           | '{' list_of_expressions '}'
   75           | '[' expression ".." expression ']'
   76           | expression '+' expression
   77           | expression '*' expression
   78           | expression '-' expression
   79           | expression '/' expression
   80           | expression '%' expression
   81           | '-' expression
   82           | expression "++"
   83           | expression "--"
   84           | "++" expression
   85           | "--" expression
   86           | expression '<' expression
   87           | expression "<=" expression
   88           | expression '>' expression
   89           | expression ">=" expression
   90           | expression "==" expression
   91           | expression "!=" expression
   92           | expression "<<" expression
   93           | expression ">>" expression
   94           | expression '&' expression
   95           | expression '|' expression
   96           | expression "&&" expression
   97           | expression "||" expression
   98           | '!' expression
   99           | '(' expression ')'
  100           | ATmega328p_expression

  101 list_of_expressions: expression
  102                    | list_of_expressions ',' expression

  103 constant_expression: "TRUE"
  104                    | "FALSE"
  105                    | PIN
  106                    | INTEGER
  107                    | FLOAT
  108                    | STRING

  109 ATmega328p_procedure: "pinMode" '(' expression ',' expression ')' ';'
  110                     | "digitalWrite" '(' expression ',' expression ')' ';'
  111                     | "analogReference" '(' expression ')' ';'
  112                     | "analogWrite" '(' expression ',' expression ')' ';'
  113                     | "peek" '(' ')' ';'
  114                     | "flush" '(' ')' ';'
  115                     | "putc" '(' expression ')' ';'
  116                     | "puts" '(' expression ')' ';'
  117                     | "delay_s" '(' expression ')' ';'
  118                     | "delay_ms" '(' expression ')' ';'

  119 ATmega328p_expression: "LOW"
  120                      | "HIGH"
  121                      | "INPUT"
  122                      | "INPUTPULLUP"
  123                      | "OUTPUT"
  124                      | "digitalRead" '(' expression ')'
  125                      | "analogRead" '(' expression ')'
  126                      | "getc" '(' ')'
  127                      | "available" '(' ')'


Terminals, with rules where they appear

    $end (0) 0
    '!' <Token> (33) 98
    '%' <Token> (37) 80
    '&' <Token> (38) 94
    '(' (40) 16 17 19 21 32 58 59 72 99 109 110 111 112 113 114 115 116 117 118 124 125 126 127
    ')' (41) 16 17 19 21 32 58 59 72 99 109 110 111 112 113 114 115 116 117 118 124 125 126 127
    '*' <Token> (42) 77
    '+' <Token> (43) 76
    ',' (44) 14 23 102 109 110 112
    '-' <Token> (45) 78 81
    '/' <Token> (47) 79
    ':' <Token> (58) 12 16 19 24 36 67
    ';' (59) 12 15 16 17 36 45 46 47 48 49 50 51 52 53 54 55 56 59 61 62 63 109 110 111 112 113 114 115 116 117 118
    '<' <Token> (60) 86
    '=' <Token> (61) 15 47
    '>' <Token> (62) 88
    '[' (91) 28 69 73 75
    ']' (93) 28 69 73 75
    '{' (123) 19 21 33 58 64 74
    '|' <Token> (124) 95
    '}' (125) 19 21 33 58 64 74
    error (256)
    "<=" <Token> (258) 87
    ">=" <Token> (259) 89
    "==" <Token> (260) 90
    "!=" <Token> (261) 91
    "<<" <Token> (262) 92
    ">>" <Token> (263) 93
    "&&" <Token> (264) 96
    "||" <Token> (265) 97
    "+=" <Token> (266) 48
    "-=" <Token> (267) 49
    "*=" <Token> (268) 50
    "/=" <Token> (269) 51
    "%=" <Token> (270) 52
    "&=" <Token> (271) 53
    "|=" <Token> (272) 54
    "&&=" <Token> (273) 55
    "||=" <Token> (274) 56
    "++" <Token> (275) 45 82 84
    "--" <Token> (276) 46 83 85
    ".." <Token> (277) 75
    "begin" <Token> (278) 1
    "boolean" <Token> (279) 26
    "break" <Token> (280) 61
    "byte" <Token> (281) 37 39
    "case" <Token> (282) 67
    "continue" <Token> (283) 62
    "do" <Token> (284) 59
    "double" <Token> (285)
    "else" <Token> (286)
    "end" <Token> (287) 1
    "enum" <Token> (288) 32
    "FALSE" <Token> (289) 104
    "float" <Token> (290) 44
    "foreach" <Token> (291)
    "function" <Token> (292) 16 19
    "if" <Token> (293)
    "integer" <Token> (294) 42 43
    "in" <Token> (295)
    "list" <Token> (296) 31
    "long" <Token> (297)
    "loop" <Token> (298) 60
    "of" <Token> (299) 29 30 31
    "procedure" <Token> (300) 17 21
    "range" <Token> (301) 29
    "return" <Token> (302) 63
    "set" <Token> (303) 30
    "short" <Token> (304) 40 41
    "struct" <Token> (305) 33
    "string" <Token> (306) 28
    "switch" <Token> (307) 58
    "TRUE" <Token> (308) 103
    "unsigned" <Token> (309) 39 41 43
    "while" <Token> (310) 59
    "pinMode" <Token> (311) 109
    "digitalWrite" <Token> (312) 110
    "analogReference" <Token> (313) 111
    "analogWrite" <Token> (314) 112
    "digitalRead" <Token> (315) 124
    "analogRead" <Token> (316) 125
    "LOW" <Token> (317) 119
    "HIGH" <Token> (318) 120
    "INPUT" <Token> (319) 121
    "INPUTPULLUP" <Token> (320) 122
    "OUTPUT" <Token> (321) 123
    "pin" <Token> (322) 38
    "getc" <Token> (323) 126
    "available" <Token> (324) 127
    "peek" <Token> (325) 113
    "flush" <Token> (326) 114
    "putc" <Token> (327) 115
    "puts" <Token> (328) 116
    "delay_ms" <Token> (329) 118
    "delay_s" <Token> (330) 117
    IDENTIFIER <String> (331) 13 14 15 16 17 19 21 24 36 68 69 72
    INTEGER <Long> (332) 28 106
    PIN <Integer> (333) 105
    FLOAT <Float> (334) 107
    STRING <String> (335) 108
    HIGHER_THAN_NOT (336)
    HIGHER_THAN_MINUS (337)


Nonterminals, with rules where they appear

    $accept (103)
        on left: 0
    program (104)
        on left: 1
        on right: 0
    list_of_definitions (105)
        on left: 2 3
        on right: 1 3
    list_of_stms <List<Stm> > (106)
        on left: 4 5
        on right: 1 5 25 64
    definition (107)
        on left: 6 7 8 9 10 11
        on right: 3
    var_definition (108)
        on left: 12
        on right: 6
    list_of_identifiers <List<String> > (109)
        on left: 13 14
        on right: 12 14 32
    type_definition (110)
        on left: 15
        on right: 7
    function_decl (111)
        on left: 16
        on right: 8
    procedure_decl (112)
        on left: 17
        on right: 9
    function_definition (113)
        on left: 19
        on right: 10
    $@1 (114)
        on left: 18
        on right: 19
    procedure_definition (115)
        on left: 21
        on right: 11
    $@2 (116)
        on left: 20
        on right: 21
    list_of_parameters <List<TypeFIELD> > (117)
        on left: 22 23
        on right: 16 17 19 21 23
    parameter <TypeFIELD> (118)
        on left: 24
        on right: 22 23
    block (119)
        on left: 25
        on right: 19 21
    type <Type> (120)
        on left: 26 27 28 29 30 31 32 33
        on right: 12 15 16 19 24 29 30 31 36
    list_of_fields <List<TypeFIELD> > (121)
        on left: 34 35
        on right: 33 35
    field <TypeFIELD> (122)
        on left: 36
        on right: 34 35
    number <Type> (123)
        on left: 37 38 39 40 41 42 43 44
        on right: 27
    stm <Stm> (124)
        on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
        on right: 4 5 59 60 67
    list_of_case_stms <List<StmCASE> > (125)
        on left: 65 66
        on right: 58 66
    case_stm <StmCASE> (126)
        on left: 67
        on right: 65 66
    left_part <Expr> (127)
        on left: 68 69
        on right: 45 46 47 48 49 50 51 52 53 54 55 56 71
    expression <Expr> (128)
        on left: 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100
        on right: 47 48 49 50 51 52 53 54 55 56 58 59 63 67 69 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 101 102 109 110 111 112 115 116 117 118 124 125
    list_of_expressions <List<Expr> > (129)
        on left: 101 102
        on right: 72 73 74 102
    constant_expression <ExprCONSTANT> (130)
        on left: 103 104 105 106 107 108
        on right: 70
    ATmega328p_procedure <Expr> (131)
        on left: 109 110 111 112 113 114 115 116 117 118
        on right: 57
    ATmega328p_expression <Expr> (132)
        on left: 119 120 121 122 123 124 125 126 127
        on right: 100


State 0

    0 $accept: • program $end
    1 program: • list_of_definitions "begin" list_of_stms "end"
    2 list_of_definitions: • %empty
    3                    | • list_of_definitions definition

    $default  reduce using rule 2 (list_of_definitions)

    program              go to state 1
    list_of_definitions  go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: list_of_definitions • "begin" list_of_stms "end"
    3 list_of_definitions: list_of_definitions • definition
    6 definition: • var_definition
    7           | • type_definition
    8           | • function_decl
    9           | • procedure_decl
   10           | • function_definition
   11           | • procedure_definition
   12 var_definition: • list_of_identifiers ':' type ';'
   13 list_of_identifiers: • IDENTIFIER
   14                    | • list_of_identifiers ',' IDENTIFIER
   15 type_definition: • IDENTIFIER '=' type ';'
   16 function_decl: • "function" IDENTIFIER '(' list_of_parameters ')' ':' type ';'
   17 procedure_decl: • "procedure" IDENTIFIER '(' list_of_parameters ')' ';'
   19 function_definition: • "function" IDENTIFIER '(' list_of_parameters ')' ':' type '{' $@1 block '}'
   21 procedure_definition: • "procedure" IDENTIFIER '(' list_of_parameters ')' '{' $@2 block '}'

    "begin"      shift, and go to state 4
    "function"   shift, and go to state 5
    "procedure"  shift, and go to state 6
    IDENTIFIER   shift, and go to state 7

    definition            go to state 8
    var_definition        go to state 9
    list_of_identifiers   go to state 10
    type_definition       go to state 11
    function_decl         go to state 12
    procedure_decl        go to state 13
    function_definition   go to state 14
    procedure_definition  go to state 15


State 3

    0 $accept: program $end •

    $default  accept


State 4

    1 program: list_of_definitions "begin" • list_of_stms "end"
    4 list_of_stms: • stm
    5             | • list_of_stms stm
   45 stm: • left_part "++" ';'
   46    | • left_part "--" ';'
   47    | • left_part '=' expression ';'
   48    | • left_part "+=" expression ';'
   49    | • left_part "-=" expression ';'
   50    | • left_part "*=" expression ';'
   51    | • left_part "/=" expression ';'
   52    | • left_part "%=" expression ';'
   53    | • left_part "&=" expression ';'
   54    | • left_part "|=" expression ';'
   55    | • left_part "&&=" expression ';'
   56    | • left_part "||=" expression ';'
   57    | • ATmega328p_procedure
   58    | • "switch" '(' expression ')' '{' list_of_case_stms '}'
   59    | • "do" stm "while" '(' expression ')' ';'
   60    | • "loop" stm
   61    | • "break" ';'
   62    | • "continue" ';'
   63    | • "return" expression ';'
   64    | • '{' list_of_stms '}'
   68 left_part: • IDENTIFIER
   69          | • IDENTIFIER '[' expression ']'
  109 ATmega328p_procedure: • "pinMode" '(' expression ',' expression ')' ';'
  110                     | • "digitalWrite" '(' expression ',' expression ')' ';'
  111                     | • "analogReference" '(' expression ')' ';'
  112                     | • "analogWrite" '(' expression ',' expression ')' ';'
  113                     | • "peek" '(' ')' ';'
  114                     | • "flush" '(' ')' ';'
  115                     | • "putc" '(' expression ')' ';'
  116                     | • "puts" '(' expression ')' ';'
  117                     | • "delay_s" '(' expression ')' ';'
  118                     | • "delay_ms" '(' expression ')' ';'

    "break"            shift, and go to state 16
    "continue"         shift, and go to state 17
    "do"               shift, and go to state 18
    "loop"             shift, and go to state 19
    "return"           shift, and go to state 20
    "switch"           shift, and go to state 21
    "pinMode"          shift, and go to state 22
    "digitalWrite"     shift, and go to state 23
    "analogReference"  shift, and go to state 24
    "analogWrite"      shift, and go to state 25
    "peek"             shift, and go to state 26
    "flush"            shift, and go to state 27
    "putc"             shift, and go to state 28
    "puts"             shift, and go to state 29
    "delay_ms"         shift, and go to state 30
    "delay_s"          shift, and go to state 31
    IDENTIFIER         shift, and go to state 32
    '{'                shift, and go to state 33

    list_of_stms          go to state 34
    stm                   go to state 35
    left_part             go to state 36
    ATmega328p_procedure  go to state 37


State 5

   16 function_decl: "function" • IDENTIFIER '(' list_of_parameters ')' ':' type ';'
   19 function_definition: "function" • IDENTIFIER '(' list_of_parameters ')' ':' type '{' $@1 block '}'

    IDENTIFIER  shift, and go to state 38


State 6

   17 procedure_decl: "procedure" • IDENTIFIER '(' list_of_parameters ')' ';'
   21 procedure_definition: "procedure" • IDENTIFIER '(' list_of_parameters ')' '{' $@2 block '}'

    IDENTIFIER  shift, and go to state 39


State 7

   13 list_of_identifiers: IDENTIFIER •
   15 type_definition: IDENTIFIER • '=' type ';'

    '='  shift, and go to state 40

    $default  reduce using rule 13 (list_of_identifiers)


State 8

    3 list_of_definitions: list_of_definitions definition •

    $default  reduce using rule 3 (list_of_definitions)


State 9

    6 definition: var_definition •

    $default  reduce using rule 6 (definition)


State 10

   12 var_definition: list_of_identifiers • ':' type ';'
   14 list_of_identifiers: list_of_identifiers • ',' IDENTIFIER

    ':'  shift, and go to state 41
    ','  shift, and go to state 42


State 11

    7 definition: type_definition •

    $default  reduce using rule 7 (definition)


State 12

    8 definition: function_decl •

    $default  reduce using rule 8 (definition)


State 13

    9 definition: procedure_decl •

    $default  reduce using rule 9 (definition)


State 14

   10 definition: function_definition •

    $default  reduce using rule 10 (definition)


State 15

   11 definition: procedure_definition •

    $default  reduce using rule 11 (definition)


State 16

   61 stm: "break" • ';'

    ';'  shift, and go to state 43


State 17

   62 stm: "continue" • ';'

    ';'  shift, and go to state 44


State 18

   45 stm: • left_part "++" ';'
   46    | • left_part "--" ';'
   47    | • left_part '=' expression ';'
   48    | • left_part "+=" expression ';'
   49    | • left_part "-=" expression ';'
   50    | • left_part "*=" expression ';'
   51    | • left_part "/=" expression ';'
   52    | • left_part "%=" expression ';'
   53    | • left_part "&=" expression ';'
   54    | • left_part "|=" expression ';'
   55    | • left_part "&&=" expression ';'
   56    | • left_part "||=" expression ';'
   57    | • ATmega328p_procedure
   58    | • "switch" '(' expression ')' '{' list_of_case_stms '}'
   59    | • "do" stm "while" '(' expression ')' ';'
   59    | "do" • stm "while" '(' expression ')' ';'
   60    | • "loop" stm
   61    | • "break" ';'
   62    | • "continue" ';'
   63    | • "return" expression ';'
   64    | • '{' list_of_stms '}'
   68 left_part: • IDENTIFIER
   69          | • IDENTIFIER '[' expression ']'
  109 ATmega328p_procedure: • "pinMode" '(' expression ',' expression ')' ';'
  110                     | • "digitalWrite" '(' expression ',' expression ')' ';'
  111                     | • "analogReference" '(' expression ')' ';'
  112                     | • "analogWrite" '(' expression ',' expression ')' ';'
  113                     | • "peek" '(' ')' ';'
  114                     | • "flush" '(' ')' ';'
  115                     | • "putc" '(' expression ')' ';'
  116                     | • "puts" '(' expression ')' ';'
  117                     | • "delay_s" '(' expression ')' ';'
  118                     | • "delay_ms" '(' expression ')' ';'

    "break"            shift, and go to state 16
    "continue"         shift, and go to state 17
    "do"               shift, and go to state 18
    "loop"             shift, and go to state 19
    "return"           shift, and go to state 20
    "switch"           shift, and go to state 21
    "pinMode"          shift, and go to state 22
    "digitalWrite"     shift, and go to state 23
    "analogReference"  shift, and go to state 24
    "analogWrite"      shift, and go to state 25
    "peek"             shift, and go to state 26
    "flush"            shift, and go to state 27
    "putc"             shift, and go to state 28
    "puts"             shift, and go to state 29
    "delay_ms"         shift, and go to state 30
    "delay_s"          shift, and go to state 31
    IDENTIFIER         shift, and go to state 32
    '{'                shift, and go to state 33

    stm                   go to state 45
    left_part             go to state 36
    ATmega328p_procedure  go to state 37


State 19

   45 stm: • left_part "++" ';'
   46    | • left_part "--" ';'
   47    | • left_part '=' expression ';'
   48    | • left_part "+=" expression ';'
   49    | • left_part "-=" expression ';'
   50    | • left_part "*=" expression ';'
   51    | • left_part "/=" expression ';'
   52    | • left_part "%=" expression ';'
   53    | • left_part "&=" expression ';'
   54    | • left_part "|=" expression ';'
   55    | • left_part "&&=" expression ';'
   56    | • left_part "||=" expression ';'
   57    | • ATmega328p_procedure
   58    | • "switch" '(' expression ')' '{' list_of_case_stms '}'
   59    | • "do" stm "while" '(' expression ')' ';'
   60    | • "loop" stm
   60    | "loop" • stm
   61    | • "break" ';'
   62    | • "continue" ';'
   63    | • "return" expression ';'
   64    | • '{' list_of_stms '}'
   68 left_part: • IDENTIFIER
   69          | • IDENTIFIER '[' expression ']'
  109 ATmega328p_procedure: • "pinMode" '(' expression ',' expression ')' ';'
  110                     | • "digitalWrite" '(' expression ',' expression ')' ';'
  111                     | • "analogReference" '(' expression ')' ';'
  112                     | • "analogWrite" '(' expression ',' expression ')' ';'
  113                     | • "peek" '(' ')' ';'
  114                     | • "flush" '(' ')' ';'
  115                     | • "putc" '(' expression ')' ';'
  116                     | • "puts" '(' expression ')' ';'
  117                     | • "delay_s" '(' expression ')' ';'
  118                     | • "delay_ms" '(' expression ')' ';'

    "break"            shift, and go to state 16
    "continue"         shift, and go to state 17
    "do"               shift, and go to state 18
    "loop"             shift, and go to state 19
    "return"           shift, and go to state 20
    "switch"           shift, and go to state 21
    "pinMode"          shift, and go to state 22
    "digitalWrite"     shift, and go to state 23
    "analogReference"  shift, and go to state 24
    "analogWrite"      shift, and go to state 25
    "peek"             shift, and go to state 26
    "flush"            shift, and go to state 27
    "putc"             shift, and go to state 28
    "puts"             shift, and go to state 29
    "delay_ms"         shift, and go to state 30
    "delay_s"          shift, and go to state 31
    IDENTIFIER         shift, and go to state 32
    '{'                shift, and go to state 33

    stm                   go to state 46
    left_part             go to state 36
    ATmega328p_procedure  go to state 37


State 20

   63 stm: "return" • expression ';'
   68 left_part: • IDENTIFIER
   69          | • IDENTIFIER '[' expression ']'
   70 expression: • constant_expression
   71           | • left_part
   72           | • IDENTIFIER '(' list_of_expressions ')'
   73           | • '[' list_of_expressions ']'
   74           | • '{' list_of_expressions '}'
   75           | • '[' expression ".." expression ']'
   76           | • expression '+' expression
   77           | • expression '*' expression
   78           | • expression '-' expression
   79           | • expression '/' expression
   80           | • expression '%' expression
   81           | • '-' expression
   82           | • expression "++"
   83           | • expression "--"
   84           | • "++" expression
   85           | • "--" expression
   86           | • expression '<' expression
   87           | • expression "<=" expression
   88           | • expression '>' expression
   89           | • expression ">=" expression
   90           | • expression "==" expression
   91           | • expression "!=" expression
   92           | • expression "<<" expression
   93           | • expression ">>" expression
   94           | • expression '&' expression
   95           | • expression '|' expression
   96           | • expression "&&" expression
   97           | • expression "||" expression
   98           | • '!' expression
   99           | • '(' expression ')'
  100           | • ATmega328p_expression
  103 constant_expression: • "TRUE"
  104                    | • "FALSE"
  105                    | • PIN
  106                    | • INTEGER
  107                    | • FLOAT
  108                    | • STRING
  119 ATmega328p_expression: • "LOW"
  120                      | • "HIGH"
  121                      | • "INPUT"
  122                      | • "INPUTPULLUP"
  123                      | • "OUTPUT"
  124                      | • "digitalRead" '(' expression ')'
  125                      | • "analogRead" '(' expression ')'
  126                      | • "getc" '(' ')'
  127                      | • "available" '(' ')'

    '!'            shift, and go to state 47
    '-'            shift, and go to state 48
    "++"           shift, and go to state 49
    "--"           shift, and go to state 50
    "FALSE"        shift, and go to state 51
    "TRUE"         shift, and go to state 52
    "digitalRead"  shift, and go to state 53
    "analogRead"   shift, and go to state 54
    "LOW"          shift, and go to state 55
    "HIGH"         shift, and go to state 56
    "INPUT"        shift, and go to state 57
    "INPUTPULLUP"  shift, and go to state 58
    "OUTPUT"       shift, and go to state 59
    "getc"         shift, and go to state 60
    "available"    shift, and go to state 61
    IDENTIFIER     shift, and go to state 62
    INTEGER        shift, and go to state 63
    PIN            shift, and go to state 64
    FLOAT          shift, and go to state 65
    STRING         shift, and go to state 66
    '('            shift, and go to state 67
    '{'            shift, and go to state 68
    '['            shift, and go to state 69

    left_part              go to state 70
    expression             go to state 71
    constant_expression    go to state 72
    ATmega328p_expression  go to state 73


State 21

   58 stm: "switch" • '(' expression ')' '{' list_of_case_stms '}'

    '('  shift, and go to state 74


State 22

  109 ATmega328p_procedure: "pinMode" • '(' expression ',' expression ')' ';'

    '('  shift, and go to state 75


State 23

  110 ATmega328p_procedure: "digitalWrite" • '(' expression ',' expression ')' ';'

    '('  shift, and go to state 76


State 24

  111 ATmega328p_procedure: "analogReference" • '(' expression ')' ';'

    '('  shift, and go to state 77


State 25

  112 ATmega328p_procedure: "analogWrite" • '(' expression ',' expression ')' ';'

    '('  shift, and go to state 78


State 26

  113 ATmega328p_procedure: "peek" • '(' ')' ';'

    '('  shift, and go to state 79


State 27

  114 ATmega328p_procedure: "flush" • '(' ')' ';'

    '('  shift, and go to state 80


State 28

  115 ATmega328p_procedure: "putc" • '(' expression ')' ';'

    '('  shift, and go to state 81


State 29

  116 ATmega328p_procedure: "puts" • '(' expression ')' ';'

    '('  shift, and go to state 82


State 30

  118 ATmega328p_procedure: "delay_ms" • '(' expression ')' ';'

    '('  shift, and go to state 83


State 31

  117 ATmega328p_procedure: "delay_s" • '(' expression ')' ';'

    '('  shift, and go to state 84


State 32

   68 left_part: IDENTIFIER •
   69          | IDENTIFIER • '[' expression ']'

    '['  shift, and go to state 85

    $default  reduce using rule 68 (left_part)


State 33

    4 list_of_stms: • stm
    5             | • list_of_stms stm
   45 stm: • left_part "++" ';'
   46    | • left_part "--" ';'
   47    | • left_part '=' expression ';'
   48    | • left_part "+=" expression ';'
   49    | • left_part "-=" expression ';'
   50    | • left_part "*=" expression ';'
   51    | • left_part "/=" expression ';'
   52    | • left_part "%=" expression ';'
   53    | • left_part "&=" expression ';'
   54    | • left_part "|=" expression ';'
   55    | • left_part "&&=" expression ';'
   56    | • left_part "||=" expression ';'
   57    | • ATmega328p_procedure
   58    | • "switch" '(' expression ')' '{' list_of_case_stms '}'
   59    | • "do" stm "while" '(' expression ')' ';'
   60    | • "loop" stm
   61    | • "break" ';'
   62    | • "continue" ';'
   63    | • "return" expression ';'
   64    | • '{' list_of_stms '}'
   64    | '{' • list_of_stms '}'
   68 left_part: • IDENTIFIER
   69          | • IDENTIFIER '[' expression ']'
  109 ATmega328p_procedure: • "pinMode" '(' expression ',' expression ')' ';'
  110                     | • "digitalWrite" '(' expression ',' expression ')' ';'
  111                     | • "analogReference" '(' expression ')' ';'
  112                     | • "analogWrite" '(' expression ',' expression ')' ';'
  113                     | • "peek" '(' ')' ';'
  114                     | • "flush" '(' ')' ';'
  115                     | • "putc" '(' expression ')' ';'
  116                     | • "puts" '(' expression ')' ';'
  117                     | • "delay_s" '(' expression ')' ';'
  118                     | • "delay_ms" '(' expression ')' ';'

    "break"            shift, and go to state 16
    "continue"         shift, and go to state 17
    "do"               shift, and go to state 18
    "loop"             shift, and go to state 19
    "return"           shift, and go to state 20
    "switch"           shift, and go to state 21
    "pinMode"          shift, and go to state 22
    "digitalWrite"     shift, and go to state 23
    "analogReference"  shift, and go to state 24
    "analogWrite"      shift, and go to state 25
    "peek"             shift, and go to state 26
    "flush"            shift, and go to state 27
    "putc"             shift, and go to state 28
    "puts"             shift, and go to state 29
    "delay_ms"         shift, and go to state 30
    "delay_s"          shift, and go to state 31
    IDENTIFIER         shift, and go to state 32
    '{'                shift, and go to state 33

    list_of_stms          go to state 86
    stm                   go to state 35
    left_part             go to state 36
    ATmega328p_procedure  go to state 37


State 34

    1 program: list_of_definitions "begin" list_of_stms • "end"
    5 list_of_stms: list_of_stms • stm
   45 stm: • left_part "++" ';'
   46    | • left_part "--" ';'
   47    | • left_part '=' expression ';'
   48    | • left_part "+=" expression ';'
   49    | • left_part "-=" expression ';'
   50    | • left_part "*=" expression ';'
   51    | • left_part "/=" expression ';'
   52    | • left_part "%=" expression ';'
   53    | • left_part "&=" expression ';'
   54    | • left_part "|=" expression ';'
   55    | • left_part "&&=" expression ';'
   56    | • left_part "||=" expression ';'
   57    | • ATmega328p_procedure
   58    | • "switch" '(' expression ')' '{' list_of_case_stms '}'
   59    | • "do" stm "while" '(' expression ')' ';'
   60    | • "loop" stm
   61    | • "break" ';'
   62    | • "continue" ';'
   63    | • "return" expression ';'
   64    | • '{' list_of_stms '}'
   68 left_part: • IDENTIFIER
   69          | • IDENTIFIER '[' expression ']'
  109 ATmega328p_procedure: • "pinMode" '(' expression ',' expression ')' ';'
  110                     | • "digitalWrite" '(' expression ',' expression ')' ';'
  111                     | • "analogReference" '(' expression ')' ';'
  112                     | • "analogWrite" '(' expression ',' expression ')' ';'
  113                     | • "peek" '(' ')' ';'
  114                     | • "flush" '(' ')' ';'
  115                     | • "putc" '(' expression ')' ';'
  116                     | • "puts" '(' expression ')' ';'
  117                     | • "delay_s" '(' expression ')' ';'
  118                     | • "delay_ms" '(' expression ')' ';'

    "break"            shift, and go to state 16
    "continue"         shift, and go to state 17
    "do"               shift, and go to state 18
    "end"              shift, and go to state 87
    "loop"             shift, and go to state 19
    "return"           shift, and go to state 20
    "switch"           shift, and go to state 21
    "pinMode"          shift, and go to state 22
    "digitalWrite"     shift, and go to state 23
    "analogReference"  shift, and go to state 24
    "analogWrite"      shift, and go to state 25
    "peek"             shift, and go to state 26
    "flush"            shift, and go to state 27
    "putc"             shift, and go to state 28
    "puts"             shift, and go to state 29
    "delay_ms"         shift, and go to state 30
    "delay_s"          shift, and go to state 31
    IDENTIFIER         shift, and go to state 32
    '{'                shift, and go to state 33

    stm                   go to state 88
    left_part             go to state 36
    ATmega328p_procedure  go to state 37


State 35

    4 list_of_stms: stm •

    $default  reduce using rule 4 (list_of_stms)


State 36

   45 stm: left_part • "++" ';'
   46    | left_part • "--" ';'
   47    | left_part • '=' expression ';'
   48    | left_part • "+=" expression ';'
   49    | left_part • "-=" expression ';'
   50    | left_part • "*=" expression ';'
   51    | left_part • "/=" expression ';'
   52    | left_part • "%=" expression ';'
   53    | left_part • "&=" expression ';'
   54    | left_part • "|=" expression ';'
   55    | left_part • "&&=" expression ';'
   56    | left_part • "||=" expression ';'

    "+="   shift, and go to state 89
    "-="   shift, and go to state 90
    "*="   shift, and go to state 91
    "/="   shift, and go to state 92
    "%="   shift, and go to state 93
    "&="   shift, and go to state 94
    "|="   shift, and go to state 95
    "&&="  shift, and go to state 96
    "||="  shift, and go to state 97
    "++"   shift, and go to state 98
    "--"   shift, and go to state 99
    '='    shift, and go to state 100


State 37

   57 stm: ATmega328p_procedure •

    $default  reduce using rule 57 (stm)


State 38

   16 function_decl: "function" IDENTIFIER • '(' list_of_parameters ')' ':' type ';'
   19 function_definition: "function" IDENTIFIER • '(' list_of_parameters ')' ':' type '{' $@1 block '}'

    '('  shift, and go to state 101


State 39

   17 procedure_decl: "procedure" IDENTIFIER • '(' list_of_parameters ')' ';'
   21 procedure_definition: "procedure" IDENTIFIER • '(' list_of_parameters ')' '{' $@2 block '}'

    '('  shift, and go to state 102


State 40

   15 type_definition: IDENTIFIER '=' • type ';'
   26 type: • "boolean"
   27     | • number
   28     | • "string" '[' INTEGER ']'
   29     | • "range" "of" type
   30     | • "set" "of" type
   31     | • "list" "of" type
   32     | • "enum" '(' list_of_identifiers ')'
   33     | • "struct" '{' list_of_fields '}'
   37 number: • "byte"
   38       | • "pin"
   39       | • "unsigned" "byte"
   40       | • "short"
   41       | • "unsigned" "short"
   42       | • "integer"
   43       | • "unsigned" "integer"
   44       | • "float"
